test/resources/valid/ValidNetworkUnorderedArgs.flo
action GET_ALL_POSTS = network(method = 'GET', url = '/posts');

flow POSTS = {
    array posts = [];
    GET_ALL_POSTS >> posts;
}