test/resources/invalid/parse/InvalidVarMissingType.flo
action GET_ALL_POSTS = network(url = '/posts', method = 'GET');

flow POSTS = {
    posts = [];
    GET_ALL_POSTS >> posts;
}